--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -1052,5 +1052,11 @@ $info-box-4-caption-py:                 5rem;
 --ui-color-main: #2d2e33;
 --ui-color-sub: #2c393c;
 
+// Font, line-height, and color for body text, headings, and more.
+// 
+--font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+--font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+--font-zh: "Montserrat", 'Verdana', 'Avenir', "Noto Serif SC", 宋体, SimSun, 
+
 }
 
