--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -6,10 +6,20 @@
 
 // Import Bootstrap
 // 
-// 
+
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/root";
+@import "../node_modules/bootstrap/scss/reboot";
+@import "../node_modules/bootstrap/scss/type";
+@import "../node_modules/bootstrap/scss/list-group";
+@import "../node_modules/bootstrap/scss/card";
+@import "../node_modules/bootstrap/scss/grid";
+@import "../node_modules/bootstrap/scss/utilities";
 
 
-
+/*
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/mixins";
@@ -47,14 +57,14 @@
 //@import "../node_modules/bootstrap/scss/spinners";
 @import "../node_modules/bootstrap/scss/utilities";
 //@import "../node_modules/bootstrap/scss/print";
-
+*/
 
 // Homenet Customs
 
 /*Currently Applied Used for Design*/
 @import "homenet/homenet-type";
 @import "homenet/homenet-main";
-@import "homenet/homenet-buttons";
+//@import "homenet/homenet-buttons";
 @import "homenet/homenet-navbar";
 //@import "homenet/homenet-footer";
 
@@ -71,30 +81,27 @@
 @import "homenet/homenet-lists";
 @import "homenet/homenet-flip-cards";
 @import "homenet/homenet-bubble-quote";
-//@import "homenet/homenet-avatar-dropdown";
+@import "homenet/homenet-avatar-dropdown";
 
 // Homenet Elements
-@import "homenet/homenet-portfolio";
-@import "homenet/homenet-tabs";
-@import "homenet/homenet-icon_boxes";
-@import "homenet/homenet-services-items";
-@import "homenet/homenet-members-sliders";
-@import "homenet/homenet-clients";
+//@import "homenet/homenet-portfolio";
+//@import "homenet/homenet-tabs";
+//@import "homenet/homenet-icon_boxes";
+//@import "homenet/homenet-services-items";
+//@import "homenet/homenet-members-sliders";
+//@import "homenet/homenet-clients";
 
 // Homenet Animations
-@import "homenet/homenet-agent-pop-effect";
+//@import "homenet/homenet-agent-pop-effect";
 
 // Homenet Effects
-@import "homenet/homenet-swiper";
-@import "homenet/homenet-counters";
+//@import "homenet/homenet-swiper";
+//@import "homenet/homenet-counters";
 
 
 // General UI Kit
-@import "mixins";
-@import "partials/list-group";
-@import "partials/breadcrumb";
 
-/*
+
 
 // General UI Kit
 @import "mixins";
@@ -126,14 +133,13 @@
 @import "utilities/text";
 
 // Extra components
-@import "extras/title";
-@import "extras/dividers";
-@import "extras/drop-cap";
-@import "extras/meta";
-@import "extras/author";
-@import "extras/icon-info";
-@import "extras/hover-transitions";
-@import "extras/testimonial";
-@import "extras/info-box";
+//@import "extras/title";
+//@import "extras/dividers";
+//@import "extras/drop-cap";
+//@import "extras/meta";
+//@import "extras/author";
+//@import "extras/icon-info";
+//@import "extras/hover-transitions";
+//@import "extras/testimonial";
+//@import "extras/info-box";
 
-*/
