--- a/assets/css/footer-final-min.css
+++ b/assets/css/footer-final-min.css
@@ -16,24 +16,24 @@ footer .footer-inner {
 }
 
 /* Footer Top */
-footer .footer-inner .footer-top {
+footer .footer-top {
     height: 90px;
     width: 100%;
     border-bottom: 2px solid #303d40;
 }
 
-footer .footer-inner .footer-top .footer_logo {
+footer .footer_logo {
     padding: 2px 0 6px 0;
 }
 
-footer .footer-inner .footer-top .footer_logo:hover svg {
+footer .footer_logo:hover svg {
     transition: filter 0.2s ease;
     filter: drop-shadow(2px 1px 7px rgba(255, 255, 255, 0.35));
     -webkit-filter: drop-shadow(2px 1px 7px rgba(255, 255, 255, 0.35));
 }
 
 
-footer .footer-inner .footer-top .footer-top-inner {
+footer .footer-top-inner {
     height: 100%;
     position: relative;
     align-items: center;
@@ -42,11 +42,10 @@ footer .footer-inner .footer-top .footer-top-inner {
 }
 
 /* Breadcrumb */
-footer .footer-inner .footer_breadcrumb .breadcrumb {
+footer .footer_breadcrumb .breadcrumb {
     padding: 12px 0px;
     ms-flex-pack: center !important;
     justify-content: center !important;
-
 }
 
 footer .footer-inner .footer_breadcrumb {
@@ -56,24 +55,24 @@ footer .footer-inner .footer_breadcrumb {
 
 
 /* Footer Body */
-footer .footer-inner .footer-body {
+footer .footer-body {
     padding: 17px 0 43px 0;
 }
 
 /* Links */
-footer .footer-inner .footer-body .footer_header {
+footer .footer_header {
     font-weight: 600;
     font-size: 13px;
     letter-spacing: 1.1px;
     text-transform: uppercase;
 }
 
-footer .footer-inner .footer-body .foot_link_list .foot_link {
+footer .foot_link {
     display: block;
     padding-top: 9px;
 }
 
-footer .footer-inner .footer-body .foot_link_list {
+footer .foot_link_list {
     padding-bottom: 30px;
     font-family: var(--font-family-base);
     font-size: 13.5px;
@@ -81,13 +80,13 @@ footer .footer-inner .footer-body .foot_link_list {
     font-weight: 300;
 }
 
-footer .footer-inner .footer-body .footer_header {
+footer .footer_header {
     cursor: pointer;
     padding: 14px 0;
     line-height: 23px;
 }
 
-footer .footer-inner .footer-body .call_to_action .footer_header {
+footer .call_to_action .footer_header {
     padding: 14px 0 26px 0;
 }
 
@@ -130,43 +129,43 @@ button.footer-btn:active:focus {
 }
 
 /* Footer Bottom */
-footer .footer-inner .footer_bottom {
+footer .footer_bottom {
     background-color: var(--ui-color-sub);
     padding: 15px 0;
 }
 
-footer .footer-inner .footer_bottom .copyright {
+footer .copyright {
     text-align: right;
     font-size: 12px;
     letter-spacing: 0.1px;
     font-weight: 300;
 }
 
-footer .footer-inner .footer_bottom img {
+footer .footer_bottom img {
     -webkit-filter: brightness(0) invert(1);
     filter: brightness(0) invert(1);
     -webkit-transition: filter 0.25s linear;
     transition: filter 0.25s linear;
 }
 
-footer .footer-inner .footer_bottom img:hover {
+footer .footer_bottom img:hover {
     filter: none;
 }
 
-footer .footer-inner .footer_bottom .container .row .copyright {
+footer .row .copyright {
     padding-left: 0;
     padding-right: 0;
 }
 
-footer .footer-inner .footer_bottom a.google_app {
+footer a.google_app {
     padding-right: 6px;
 }
 
-footer .footer-inner .footer_bottom a.twitter {
+footer a.twitter {
     padding-left: 3px;
 }
 
-footer .footer-inner .footer_bottom a.facebook {
+footer a.facebook {
     padding-left: 3px;
 }
 
@@ -179,45 +178,45 @@ footer .footer-inner .footer_bottom a.facebook {
     }
 
     /* No Collapse Function if above width*/
-    footer .footer-inner .footer-body .footer_header {
+    footer .footer_header {
         pointer-events: none;
         cursor: none;
     }
 
     /* No Icons if above width*/
-    footer .footer-inner .footer-body .footer_header.links img {
+    footer .footer_header.links img {
         display: none;
     }
 }
 
 @media (max-width: 767px) {
-    footer .footer-inner .footer-body .footer_header.links {
+    footer .footer_header.links {
         border-bottom: 2px solid #303d40;
         padding: 16px 0;
     }
 
-    footer .footer-inner .footer-body .listing .footer_header img.rent {
+    footer img.rent {
         height: 22px;
         top: 17px;
         position: absolute;
         left: 10%;
     }
 
-    footer .footer-inner .footer-body .listing .footer_header img.sale {
+    footer img.sale {
         height: 23px;
         top: 15px;
         position: absolute;
         left: 10%;
     }
 
-    footer .footer-inner .footer-body .info .footer_header img.info {
+    footer img.info {
         height: 21px;
         top: 18px;
         position: absolute;
         left: 10%;
     }
 
-    footer .footer-inner .footer-body .info .footer_header img.about {
+    footer img.about {
         height: 26px;
         top: 13px;
         position: absolute;
@@ -225,12 +224,11 @@ footer .footer-inner .footer_bottom a.facebook {
     }
 
 
-
-    footer .footer-inner .footer-body .call_to_action .footer_header {
+    footer .call_to_action .footer_header {
         margin-top: 45px;
     }
 
-    footer .footer-inner .footer-body .foot_link_list .foot_link {
+    footer .foot_link {
         text-align: left;
         padding-left: 18%;
     }
@@ -244,34 +242,34 @@ Media Screens
 */
 
 @media (min-width: 992px) {
-    footer .footer-inner .footer_breadcrumb .breadcrumb {
+    footer .footer_breadcrumb .breadcrumb {
         -ms-flex-pack: end !important;
         justify-content: flex-end !important;
     }
 }
 
 @media (min-width: 1201px) {
-    footer .footer-inner .footer-body .call_to_action {
+    footer .footer-body .call_to_action {
         max-width: 231px;
         text-align: right;
     }
-    footer .footer-inner .footer-body .foot_link_list{
+    footer .foot_link_list{
         font-size: 14px;
     }
 }
 
 @media (max-width: 1200px) {
-    footer .footer-inner .footer-body .call_to_action {
+    footer .footer-body .call_to_action {
         text-align: center;
     }
 }
 
 @media(max-width: 991px) {
-    footer .footer-inner .footer-top {
+    footer .footer-top {
         padding: 24px 0;
         height: auto;
     }
-    footer .footer-inner .footer_bottom {
+    footer .footer_bottom {
         padding: 25px 0;
         height: auto;
     }
@@ -280,8 +278,8 @@ Media Screens
 
 @media (min-width: 800px) {
 
-    footer .footer-inner .footer-body .listing,
-    footer .footer-inner .footer-body .info {
+    footer .footer-body .listing,
+    footer .footer-body .info {
         -ms-flex: 0 0 auto;
         flex: 0 0 auto;
         width: auto;
@@ -290,22 +288,25 @@ Media Screens
 }
 
 @media screen and (min-width: 767px) and (max-width:991px) {
-    footer .footer-inner .footer-top .footer-top-inner {
+    footer .footer-top-inner {
         flex-direction: column;
         text-align: center;
     }
 
-    footer .footer-inner .footer_bottom .container .row .copyright {
+    footer .row .copyright {
         font-size: 11.5px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
 }
 
 @media (max-width: 767px) {
-    footer .footer-inner .footer_breadcrumb .breadcrumb {
+    footer .footer_breadcrumb .breadcrumb {
         display: none;
     }
 
-    footer .footer-inner .footer_bottom .container .row .copyright {
+    footer .row .copyright {
         padding-top: 20px;
         font-size: 11px;
         text-align: center !important;
@@ -321,13 +322,13 @@ Media Screens
 }
 
 @media (max-width: 576px) {
-    footer .footer-inner .footer_bottom .social img {
+    footer .social img {
         display: none;
     }
 }
 
 @media (max-width: 450px) {
-    footer .footer-inner .footer-body .col-6 {
+    footer .footer-body .col-6 {
         padding: 0 10px;
         overflow-wrap: break-word;
     }
@@ -335,11 +336,11 @@ Media Screens
 
 /* Mobile Adjustments */
 @media (max-width: 400px) {
-    footer .footer-inner .footer-body .footer_header.links img {
+    footer .footer_header.links img {
         display: none;
     }
 
-    footer .footer-inner .footer-top .footer-top-inner {
+    footer .footer-top-inner {
         text-align: center;
         display: block;
     }
@@ -348,7 +349,7 @@ Media Screens
         min-width: inherit;
     }
 
-    footer .footer-inner .footer_bottom .google_app img {
+    footer .google_app img {
         padding-bottom: 6px;
     }
 }
@@ -356,23 +357,23 @@ Media Screens
 
 /* Back to Top Adjustment */
 @media (min-width: 1229px) {
-    footer .footer-inner .footer-top .footer_breadcrumb {
+    footer .footer-top .footer_breadcrumb {
         position: relative;
         left: 24px;
     }
 
-    footer .footer-inner .footer-top .footer_logo {
+    footer .footer_logo {
         position: relative;
         left: 24px;
     }
 }
 
 @media screen and (min-width: 319px) and (max-width:767px) {
-    footer .footer-inner .footer-top .footer-top-inner {
+    footer .footer-top-inner {
         display: block;
     }
 
-    footer .footer-inner .footer-top .footer_logo {
+    footer .footer_logo {
         margin-left: 10px;
         padding: 0;
     }
