--- a/scss/homenet.scss
+++ b/scss/homenet.scss
@@ -13,19 +13,6 @@
 @import "../node_modules/bootstrap/scss/root";
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
-@import "../node_modules/bootstrap/scss/list-group";
-@import "../node_modules/bootstrap/scss/card";
-@import "../node_modules/bootstrap/scss/grid";
-@import "../node_modules/bootstrap/scss/utilities";
-
-
-/*
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
-@import "../node_modules/bootstrap/scss/root";
-@import "../node_modules/bootstrap/scss/reboot";
-@import "../node_modules/bootstrap/scss/type";
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/code";
 @import "../node_modules/bootstrap/scss/grid";
@@ -57,16 +44,16 @@
 //@import "../node_modules/bootstrap/scss/spinners";
 @import "../node_modules/bootstrap/scss/utilities";
 //@import "../node_modules/bootstrap/scss/print";
-*/
+
 
 // Homenet Customs
 
 /*Currently Applied Used for Design*/
 @import "homenet/homenet-type";
 @import "homenet/homenet-main";
-//@import "homenet/homenet-buttons";
+@import "homenet/homenet-buttons";
 @import "homenet/homenet-navbar";
-//@import "homenet/homenet-footer";
+@import "homenet/homenet-footer";
 
 /*To be futher customized - general pages, elements  & effect*/
 @import "homenet/homenet-settings";
@@ -97,10 +84,6 @@
 // Homenet Effects
 //@import "homenet/homenet-swiper";
 //@import "homenet/homenet-counters";
-
-
-// General UI Kit
-
 
 
 // General UI Kit
